components/phpldapadmin/base/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: phpldapadmin
  labels:
    app: phpldapadmin
spec:
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
  type: ClusterIP
  selector:
    app: phpldapadmin
