components/phpldapadmin/base/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: phpldapadmin
spec:
  path: /
  to:
    kind: Service
    name: phpldapadmin
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
